tests/data/etrade_scenarios/parse_errors/bad_benefits.xlsx
This is not a valid xlsx file. It should cause a parse error.
